calico-policies/public-network-isolation/us-south/allow-egress-pods-public.yaml
# This policy opens port 53 and 5353 for DNS,
# port 2049 for communication with NFS file servers,
# ports 443 and 3260 for communication to block storage,
# port 10250 for the openVPN pod, port 4443 or 6443 for metrics-server, and
# port 2040 and 2041 on 172.21.0.0/24 for the master API server local proxy.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-public
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 4443 # Kubernetes 1.19 or later
      - 6443 # OpenShift 4.3 or later
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for us-south: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 169.45.67.210/32
      - 169.45.88.98/32
      - 169.46.110.218/32
      - 169.46.111.122/32
      - 169.46.24.210/32
      - 169.46.27.234/32
      - 169.46.68.234/32
      - 169.46.7.238/32
      - 169.46.89.50/32
      - 169.47.104.210/32
      - 169.47.109.34/32
      - 169.47.209.66/32
      - 169.47.229.90/32
      - 169.47.232.210/32
      - 169.47.239.34/32
      - 169.47.242.242/32
      - 169.47.70.10/32
      - 169.47.71.138/32
      - 169.47.72.34/32
      - 169.48.110.250/32
      - 169.48.143.218/32
      - 169.48.161.242/32
      - 169.48.226.2/32
      - 169.48.230.146/32
      - 169.48.244.66/32
      - 169.57.100.18/32
      - 169.57.13.10/32
      - 169.57.151.10/32
      - 169.57.154.98/32
      - 169.59.219.90/32
      - 169.59.230.98/32
      - 169.60.128.2/32
      - 169.60.170.234/32
      - 169.61.175.106/32
      - 169.61.177.2/32
      - 169.61.228.138/32
      - 169.61.28.66/32
      - 169.61.29.194/32
      - 169.61.60.130/32
      - 169.62.166.98/32
      - 169.62.189.26/32
      - 169.62.206.234/32
      - 169.62.82.197/32
      - 169.62.87.170/32
      - 169.63.39.66/32
      - 169.63.47.250/32
      - 50.22.129.34/32
      - 52.116.231.210/32
      - 52.116.254.234/32
      - 52.117.197.210/32
      - 52.117.212.34/32
      - 52.117.232.194/32
      - 52.117.240.106/32
      - 52.117.28.138/32
      - 67.228.97.210/32
      ports:
      - 20000:32767
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for us-south: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 169.45.67.210/32
      - 169.45.88.98/32
      - 169.46.110.218/32
      - 169.46.111.122/32
      - 169.46.24.210/32
      - 169.46.27.234/32
      - 169.46.68.234/32
      - 169.46.7.238/32
      - 169.46.89.50/32
      - 169.47.104.210/32
      - 169.47.109.34/32
      - 169.47.209.66/32
      - 169.47.229.90/32
      - 169.47.232.210/32
      - 169.47.239.34/32
      - 169.47.242.242/32
      - 169.47.70.10/32
      - 169.47.71.138/32
      - 169.47.72.34/32
      - 169.48.110.250/32
      - 169.48.143.218/32
      - 169.48.161.242/32
      - 169.48.226.2/32
      - 169.48.230.146/32
      - 169.48.244.66/32
      - 169.57.100.18/32
      - 169.57.13.10/32
      - 169.57.151.10/32
      - 169.57.154.98/32
      - 169.59.219.90/32
      - 169.59.230.98/32
      - 169.60.128.2/32
      - 169.60.170.234/32
      - 169.61.175.106/32
      - 169.61.177.2/32
      - 169.61.228.138/32
      - 169.61.28.66/32
      - 169.61.29.194/32
      - 169.61.60.130/32
      - 169.62.166.98/32
      - 169.62.189.26/32
      - 169.62.206.234/32
      - 169.62.82.197/32
      - 169.62.87.170/32
      - 169.63.39.66/32
      - 169.63.47.250/32
      - 50.22.129.34/32
      - 52.116.231.210/32
      - 52.116.254.234/32
      - 52.117.197.210/32
      - 52.117.212.34/32
      - 52.117.232.194/32
      - 52.117.240.106/32
      - 52.117.28.138/32
      - 67.228.97.210/32
      ports:
      - 20000:32767
    protocol: TCP
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
