calico-policies/public-network-isolation/us-south/allow-public-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of
# your cluster to the cluster master through the public service endpoint. Note
# that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Nets for US South: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 50.22.129.34/32
      - 52.116.231.210/32
      - 52.116.254.234/32
      - 52.117.28.138/32
      - 52.117.197.210/32
      - 52.117.212.34/32
      - 52.117.215.162/32
      - 52.117.232.194/32
      - 52.117.240.104/29
      - 67.228.97.210/32
      - 169.45.67.210/32
      - 169.45.88.98/32
      - 169.46.110.218/32
      - 169.46.111.122/32
      - 169.46.24.210/32
      - 169.46.27.234/32
      - 169.46.68.234/32
      - 169.46.7.238/32
      - 169.46.89.50/32
      - 169.47.109.34/32
      - 169.47.115.18/32
      - 169.47.201.194/32
      - 169.47.209.66/32
      - 169.47.229.90/32
      - 169.47.232.210/32
      - 169.47.239.34/32
      - 169.47.242.242/32
      - 169.47.70.10/32
      - 169.47.71.138/32
      - 169.48.110.250/32
      - 169.48.143.218/32
      - 169.48.161.242/32
      - 169.48.226.2/32
      - 169.48.230.146/32
      - 169.48.244.64/29
      - 169.57.100.18/32
      - 169.57.13.10/32
      - 169.57.151.10/32
      - 169.57.154.98/32
      - 169.59.219.90/32
      - 169.59.230.98/32
      - 169.60.128.2/32
      - 169.60.170.234/32
      - 169.61.175.106/32
      - 169.61.177.2/32
      - 169.61.228.136/29
      - 169.61.28.66/32
      - 169.61.29.194/32
      - 169.61.60.130/32
      - 169.62.166.98/32
      - 169.62.189.26/32
      - 169.62.206.234/32
      - 169.62.82.197/32
      - 169.62.87.170/32
      - 169.63.39.66/32
      - 169.63.47.250/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for US South: hou02, mex01, sao01, sjc03, sjc04, dal10, dal12, dal13
      - 50.22.129.34/32
      - 52.116.231.210/32
      - 52.116.254.234/32
      - 52.117.28.138/32
      - 52.117.197.210/32
      - 52.117.212.34/32
      - 52.117.215.162/32
      - 52.117.232.194/32
      - 52.117.240.104/29
      - 67.228.97.210/32
      - 169.45.67.210/32
      - 169.45.88.98/32
      - 169.46.110.218/32
      - 169.46.111.122/32
      - 169.46.24.210/32
      - 169.46.27.234/32
      - 169.46.68.234/32
      - 169.46.7.238/32
      - 169.46.89.50/32
      - 169.47.109.34/32
      - 169.47.115.18/32
      - 169.47.201.194/32
      - 169.47.209.66/32
      - 169.47.229.90/32
      - 169.47.232.210/32
      - 169.47.239.34/32
      - 169.47.242.242/32
      - 169.47.70.10/32
      - 169.47.71.138/32
      - 169.48.110.250/32
      - 169.48.143.218/32
      - 169.48.161.242/32
      - 169.48.226.2/32
      - 169.48.230.146/32
      - 169.48.244.64/29
      - 169.57.100.18/32
      - 169.57.13.10/32
      - 169.57.151.10/32
      - 169.57.154.98/32
      - 169.59.219.90/32
      - 169.59.230.98/32
      - 169.60.128.2/32
      - 169.60.170.234/32
      - 169.61.175.106/32
      - 169.61.177.2/32
      - 169.61.228.136/29
      - 169.61.28.66/32
      - 169.61.29.194/32
      - 169.61.60.130/32
      - 169.62.166.98/32
      - 169.62.189.26/32
      - 169.62.206.234/32
      - 169.62.82.197/32
      - 169.62.87.170/32
      - 169.63.39.66/32
      - 169.63.47.250/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_public'
  types:
  - Egress
