calico-policies/public-network-isolation/us-south/allow-public-services-pods.yaml
# This policy allows outgoing network traffic from pods to other IBM Cloud services.
# The example nets and ports in this policy are for IBM Cloud Container Registry, IBM Cloud
# IBM Cloud Monitoring, IBM Cloud Logs, and the managed Istio add-on.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 169.60.98.80/29
      - 169.62.37.240/29
      - 169.63.104.232/29
      - 169.47.153.160/28
      - 103.41.69.127/32
      - 103.41.69.114/32
      - 103.41.69.115/32
      # IBM Cloud Container Registry: US South & US East nets for your own registry
      - 169.61.46.80/29
      - 169.61.135.160/29
      - 169.61.234.224/29
      - 103.41.70.137/32
      - 103.41.70.138/32
      - 103.41.70.140/32
      - 103.41.70.145/32
      - 103.41.70.146/32
      - 103.41.70.148/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring: us-south
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints
      - 169.60.151.174/32
      - 169.46.0.70/32
      - 169.48.214.70/32
      # back up pools IBM Cloud Monitoring: US South nets
      - 169.47.102.30/32
      - 169.47.227.243/32
      - 169.62.255.114/32
      - 169.62.255.116/32
      # IBM Cloud Monitoring: br-sao subnets
      - 163.107.66.98/32
      - 163.109.67.242/32
      - 169.57.141.43/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US South nets
      - 169.47.224.74/32
      - 169.47.224.77/32
      - 169.48.237.107/32
      - 169.48.237.109/32
      - 169.60.166.44/32
      - 169.60.166.45/32
      # New IP addresses added on 1/19/2023
      - 52.117.134.204/32
      - 50.22.151.6/32
      - 67.228.208.253/32
      # End new IP address list
      # CIDR Block list added on 7/26/2023
      - 52.116.251.64/27
      - 52.118.43.0/27
      - 67.228.222.64/28
      - 67.228.228.128/26
      - 67.228.231.0/25
      - 67.228.81.0/27
      - 169.48.177.128/28
      - 169.59.254.192/26
      - 169.59.255.128/25
      - 169.61.184.64/28
      - 169.63.192.0/25
      - 169.63.193.0/26
      #End CIDR Blocks
      ports:
      - 443
      - 80
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Egress gateway
      - 80
      - 15443
    protocol: TCP
    source: {}
  order: 1800
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
